# my_tkinter_app

./: README.md  pyproject.toml  python-version  run.py
my_tkinter_app/: __init__.py  app.py
my_tkinter_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
my_tkinter_app/controller/: main_controller.py
my_tkinter_app/view/: __init__.py  main_view.py
my_tkinter_app/view/components/: __init__.py  main_frame.py  status_bar.py
my_tkinter_app/view/dialogs/: __init__.py  about_dialog.py
my_tkinter_app/view/menus/: main_menu.py
src/: __init__.py  app.py
src/controller/: main_controller.py
src/model/: app_model.py
src/view/: main_view.py
tests/: test_app.py
