[project]
name = "my-tkinter-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
authors = [
    {name = "R.N. Wolf", email = "rudi@rnwolf.net"},
]
maintainers = [
  {name = "Rüdiger Wolf", email = "rudi@rnwolf.net"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Natural Language :: English",
]
dependencies = [
    "tkcalendar>=1.6.1",
    ]
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff",
    "semver>=3.0.4",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
my-tkinter-app = "src.app:main"

[tool.setuptools]
packages = ["src"]

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "single"
